# kember

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  go.mod  go.sum  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: validation.yml
apps/kember-api/: BUILD.bazel
apps/kember-api/src/main/kotlin/dev/kember/api/: Configuration.kt  Main.kt
apps/kember-api/src/main/kotlin/dev/kember/api/http/: ApiModule.kt  UiModule.kt
apps/kember-api/src/main/kotlin/dev/kember/api/model/: ResourceModels.kt
apps/kember-api/src/main/kotlin/dev/kember/api/policy/: NamespaceAccessPolicy.kt
apps/kember-api/src/main/kotlin/dev/kember/api/repository/: Fabric8KemberResourceRepository.kt  KemberResourceRepository.kt
apps/kember-api/src/main/kotlin/dev/kember/api/service/: KemberQueryService.kt
apps/kember-api/src/test/kotlin/dev/kember/api/: ConfigurationTest.kt
apps/kember-api/src/test/kotlin/dev/kember/api/http/: ApiModuleTest.kt  UiModuleTest.kt
apps/kember-api/src/test/kotlin/dev/kember/api/policy/: NamespaceAccessPolicyTest.kt
apps/kember-api/src/test/kotlin/dev/kember/api/repository/: Fabric8KemberResourceRepositoryTest.kt
apps/kember-api/src/test/kotlin/dev/kember/api/service/: KemberQueryServiceTest.kt
apps/kember-operator/: BUILD.bazel  main.go  main_test.go
apps/kember-operator/api/v1alpha1/: BUILD.bazel  crd_contract_test.go  types.go
apps/kember-operator/controller/: BUILD.bazel  metrics.go  metrics_test.go  podexec.go  taskrun.go  taskrun_test.go  warmlease.go  warmlease_test.go  workerpool.go  workerpool_test.go
apps/kember-ui/: BUILD.bazel  index.html  package.json  test-result.sh  vite.config.ts
apps/kember-ui/src/: App.test.tsx  App.tsx  main.ts
apps/kember-ui/src/api/: ApiContext.tsx  client.test.ts  client.ts  types.ts  usePollingResource.test.tsx  usePollingResource.ts
apps/kember-ui/src/components/: AppShell.tsx  Conditions.tsx  LastUpdated.tsx  ResourceTable.tsx  States.tsx  StatusBadge.tsx  Timeline.tsx
apps/kember-ui/src/lib/: format.test.ts  format.ts
apps/kember-ui/src/pages/: Pages.test.tsx  TaskRunDetailPage.tsx  TaskRunListPage.tsx  WorkerPoolDetailPage.tsx  WorkerPoolListPage.tsx
apps/kember-ui/src/styles/: app.css
deploy/: README.md  install.sh
deploy/api/: Dockerfile  api.yaml
deploy/crd/: kember.dev_taskruns.yaml  kember.dev_workerpools.yaml  kember.openflood.org_taskruns.yaml  kember.openflood.org_workerpools.yaml
deploy/operator/: Dockerfile  namespace.yaml  operator.yaml
deploy/rbac/: kember-api.yaml  kember-operator.yaml  kember-user-roles.yaml
deploy/samples/: e2e-success.yaml  e2e-warm-single-use.yaml
docs/: api.md  v0.1-api-contract.md
docs/superpowers/specs/: 2026-07-18-alpha-usability-closure-design.md
tests/benchmark/: checkov-warmlease-burst.sh  checkov-warmlease.sh  lifecycle_timing.py  summarize.py  summarize_arrival.py  summarize_burst.py  summarize_idle_cost.py  test_lifecycle_timing.py  test_summarize.py  trivy-warmlease.sh  warm-idle-cost.sh
tests/e2e/: alpha-install-smoke.sh  api-read-only.sh  dashboard-happy-path.sh  operator-operations-smoke.sh  warm-concurrent-failures.sh  warm-single-use.sh  warm-status-clean-cluster.sh
tests/manifest/: rbac-contract.sh
tools/kotlin/: BUILD.bazel
