module(
    name = "kember",
    version = "0.1.0",
)

bazel_dep(name = "gazelle", version = "0.51.3")
bazel_dep(name = "protobuf", version = "33.4", repo_name = "com_google_protobuf")
bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "rules_java", version = "9.3.0")
bazel_dep(name = "rules_kotlin", version = "2.4.0")
bazel_dep(name = "rules_shell", version = "0.6.1")
bazel_dep(name = "rules_jvm_external", version = "6.9")
bazel_dep(name = "aspect_rules_js", version = "2.9.2")
bazel_dep(name = "rules_nodejs", version = "6.7.5")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.from_file(go_mod = "//:go.mod")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "com_github_prometheus_client_golang", "io_k8s_api", "io_k8s_apimachinery", "io_k8s_client_go", "io_k8s_sigs_controller_runtime", "org_golang_google_protobuf")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    name = "kember_maven",
    artifacts = [
        "io.fabric8:kubernetes-client:7.8.0",
        "io.fabric8:kubernetes-server-mock:7.8.0",
        "io.ktor:ktor-client-core-jvm:3.5.1",
        "io.ktor:ktor-serialization-jackson-jvm:3.5.1",
        "io.ktor:ktor-server-content-negotiation-jvm:3.5.1",
        "io.ktor:ktor-server-core-jvm:3.5.1",
        "io.ktor:ktor-server-netty-jvm:3.5.1",
        "io.ktor:ktor-server-test-host-jvm:3.5.1",
        "junit:junit:4.13.2",
        "org.jetbrains.kotlinx:kotlinx-coroutines-core-jvm:1.10.2",
    ],
    fetch_sources = True,
    repositories = ["https://repo.maven.apache.org/maven2"],
)
use_repo(maven, "kember_maven")

node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
node.toolchain(node_version = "22.12.0")
use_repo(node, "nodejs")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")
npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.gitignore",
)
use_repo(npm, "npm")

register_toolchains("//tools/kotlin:kotlin_2_2")
