load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_binary", "kt_jvm_library", "kt_jvm_test")

kt_jvm_library(
    name = "api_core",
    srcs = glob(["src/main/kotlin/**/*.kt"]),
    visibility = ["//visibility:private"],
)

kt_jvm_binary(
    name = "kember-api",
    srcs = [],
    main_class = "dev.kember.api.MainKt",
    runtime_deps = [":api_core"],
)

kt_jvm_test(
    name = "namespace_policy_test",
    srcs = ["src/test/kotlin/dev/kember/api/policy/NamespaceAccessPolicyTest.kt"],
    test_class = "dev.kember.api.policy.NamespaceAccessPolicyTest",
    deps = [
        ":api_core",
        "@kember_maven//:junit_junit",
    ],
)

kt_jvm_test(
    name = "query_service_test",
    srcs = ["src/test/kotlin/dev/kember/api/service/KemberQueryServiceTest.kt"],
    test_class = "dev.kember.api.service.KemberQueryServiceTest",
    deps = [
        ":api_core",
        "@kember_maven//:junit_junit",
        "@kember_maven//:org_jetbrains_kotlinx_kotlinx_coroutines_core_jvm",
    ],
)
