load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library", "kt_jvm_test")

kt_jvm_library(
    name = "api_core",
    srcs = glob(["src/main/kotlin/**/*.kt"]),
    deps = [
        "@kember_maven//:io_fabric8_kubernetes_client",
        "@kember_maven//:io_ktor_ktor_serialization_jackson_jvm",
        "@kember_maven//:io_ktor_ktor_server_content_negotiation_jvm",
        "@kember_maven//:io_ktor_ktor_server_core_jvm",
        "@kember_maven//:io_ktor_ktor_server_netty_jvm",
        "@kember_maven//:org_jetbrains_kotlinx_kotlinx_coroutines_core_jvm",
    ],
    visibility = ["//visibility:private"],
)

java_binary(
    name = "kember-api",
    main_class = "dev.kember.api.MainKt",
    runtime_deps = [":api_core"],
)

kt_jvm_test(
    name = "namespace_policy_test",
    srcs = ["src/test/kotlin/dev/kember/api/policy/NamespaceAccessPolicyTest.kt"],
    test_class = "dev.kember.api.policy.NamespaceAccessPolicyTest",
    deps = [
        ":api_core",
        "@kember_maven//:junit_junit",
    ],
)

kt_jvm_test(
    name = "query_service_test",
    srcs = ["src/test/kotlin/dev/kember/api/service/KemberQueryServiceTest.kt"],
    test_class = "dev.kember.api.service.KemberQueryServiceTest",
    deps = [
        ":api_core",
        "@kember_maven//:junit_junit",
        "@kember_maven//:org_jetbrains_kotlinx_kotlinx_coroutines_core_jvm",
    ],
)

kt_jvm_test(
    name = "fabric8_repository_test",
    srcs = ["src/test/kotlin/dev/kember/api/repository/Fabric8KemberResourceRepositoryTest.kt"],
    test_class = "dev.kember.api.repository.Fabric8KemberResourceRepositoryTest",
    deps = [
        ":api_core",
        "@kember_maven//:io_fabric8_kubernetes_client",
        "@kember_maven//:io_fabric8_kubernetes_server_mock",
        "@kember_maven//:junit_junit",
        "@kember_maven//:org_jetbrains_kotlinx_kotlinx_coroutines_core_jvm",
    ],
)

kt_jvm_test(
    name = "http_contract_test",
    srcs = ["src/test/kotlin/dev/kember/api/http/ApiModuleTest.kt"],
    test_class = "dev.kember.api.http.ApiModuleTest",
    deps = [
        ":api_core",
        "@kember_maven//:io_ktor_ktor_client_core_jvm",
        "@kember_maven//:io_ktor_ktor_server_test_host_jvm",
        "@kember_maven//:junit_junit",
    ],
)

kt_jvm_test(
    name = "configuration_test",
    srcs = ["src/test/kotlin/dev/kember/api/ConfigurationTest.kt"],
    test_class = "dev.kember.api.ConfigurationTest",
    deps = [
        ":api_core",
        "@kember_maven//:junit_junit",
    ],
)

kt_jvm_test(
    name = "ui_module_test",
    srcs = ["src/test/kotlin/dev/kember/api/http/UiModuleTest.kt"],
    test_class = "dev.kember.api.http.UiModuleTest",
    deps = [
        ":api_core",
        "@kember_maven//:io_ktor_ktor_client_core_jvm",
        "@kember_maven//:io_ktor_ktor_server_test_host_jvm",
        "@kember_maven//:junit_junit",
    ],
)
