load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "operator_lib",
    srcs = ["main.go"],
    importpath = "github.com/Floodnut/kember/apps/kember-operator",
    deps = [
        "//apps/kember-operator/api/v1alpha1",
        "//apps/kember-operator/controller",
        "@io_k8s_api//batch/v1:go_default_library",
        "@io_k8s_api//core/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime:go_default_library",
        "@io_k8s_client_go//kubernetes:go_default_library",
        "@io_k8s_client_go//kubernetes/scheme:go_default_library",
        "@io_k8s_sigs_controller_runtime//:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/controller:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/log/zap:go_default_library",
    ],
)

go_test(
    name = "operator_test",
    srcs = ["main_test.go"],
    embed = [":operator_lib"],
)

go_binary(
    name = "kember-operator",
    embed = [":operator_lib"],
)
