load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "controller",
    srcs = [
        "metrics.go",
        "podexec.go",
        "taskrun.go",
        "warmlease.go",
        "workerpool.go",
    ],
    importpath = "github.com/Floodnut/kember/apps/kember-operator/controller",
    visibility = ["//visibility:public"],
    deps = [
        "//apps/kember-operator/api/v1alpha1",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@io_k8s_api//batch/v1:go_default_library",
        "@io_k8s_api//coordination/v1:go_default_library",
        "@io_k8s_api//core/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/api/meta:go_default_library",
        "@io_k8s_apimachinery//pkg/api/errors:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime:go_default_library",
        "@io_k8s_apimachinery//pkg/types:go_default_library",
        "@io_k8s_client_go//kubernetes/scheme:go_default_library",
        "@io_k8s_client_go//kubernetes/typed/core/v1:go_default_library",
        "@io_k8s_client_go//rest:go_default_library",
        "@io_k8s_client_go//tools/remotecommand:go_default_library",
        "@io_k8s_client_go//util/exec:go_default_library",
        "@io_k8s_sigs_controller_runtime//:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/client:go_default_library",
    ],
)

go_test(
    name = "controller_test",
    srcs = [
        "metrics_test.go",
        "taskrun_test.go",
        "warmlease_test.go",
        "workerpool_test.go",
    ],
    embed = [":controller"],
    deps = [
        "//apps/kember-operator/api/v1alpha1",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@io_k8s_api//core/v1:go_default_library",
        "@io_k8s_api//coordination/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/api/resource:go_default_library",
        "@io_k8s_apimachinery//pkg/api/meta:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime:go_default_library",
        "@io_k8s_apimachinery//pkg/types:go_default_library",
        "@io_k8s_sigs_controller_runtime//:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/client:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/client/fake:go_default_library",
    ],
)
