load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "v1alpha1",
    srcs = ["types.go"],
    importpath = "github.com/Floodnut/kember/apps/kember-operator/api/v1alpha1",
    visibility = ["//visibility:public"],
    deps = [
        "@io_k8s_api//core/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime/schema:go_default_library",
    ],
)
